// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders snapshot 1`] = `
.c4 {
  background: transparent;
  border: 1px solid #171212;
  padding: 5px;
  cursor: pointer;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c4:hover {
  background: #171212;
  color: #ffffff;
}

.c4:hover > svg > g {
  fill: #ffffff;
  stroke: #ffffff;
}

.c5 {
  padding: 5px;
}

.c6 > svg {
  margin-left: 10px;
}

.c1 {
  width: 40%;
  padding: 0 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1 > a {
  color: inherit;
}

.c2 {
  width: 30%;
  padding: 0 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2 > a {
  color: inherit;
}

.c3 {
  width: 10%;
  padding: 0 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c3 > a {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 5px;
}

<div
  class="c0"
>
  <span
    class="c1"
    width="40%"
  >
    <a
      href="https://reactjs.org/"
    >
      React
    </a>
  </span>
  <span
    class="c2"
    width="30%"
  >
    Jordan Walke
  </span>
  <span
    class="c3"
    width="10%"
  >
    3
  </span>
  <span
    class="c3"
    width="10%"
  >
    4
  </span>
  <span
    class="c3"
    width="10%"
  >
    <button
      class="c4 c5 c6"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-check fa-w-16 "
        data-icon="check"
        data-prefix="fas"
        data-testid="dismiss"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`List renders snapshot 1`] = `
.c2 {
  background: transparent;
  border: 1px solid #171212;
  padding: 5px;
  cursor: pointer;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c2:hover {
  background: #171212;
  color: #ffffff;
}

.c2:hover > svg > g {
  fill: #ffffff;
  stroke: #ffffff;
}

.c3 {
  padding: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > span {
  font-weight: 600;
}

.c4 > svg {
  margin-left: 10px;
}

.c1 {
  width: 40%;
  padding: 0 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1 > a {
  color: inherit;
}

.c5 {
  width: 30%;
  padding: 0 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 > a {
  color: inherit;
}

.c6 {
  width: 10%;
  padding: 0 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6 > a {
  color: inherit;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 5px;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
      width="40%"
    >
      <button
        class="c2 c3 c4"
        type="button"
      >
        Title
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-down fa-w-14 "
          data-icon="arrow-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
    <span
      class="c5"
      width="30%"
    >
      <button
        class="c2 c3 c4"
        type="button"
      >
        Author
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-down fa-w-14 "
          data-icon="arrow-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
    <span
      class="c6"
      width="10%"
    >
      <button
        class="c2 c3 c4"
        type="button"
      >
        Comments
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-down fa-w-14 "
          data-icon="arrow-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
    <span
      class="c6"
      width="10%"
    >
      <button
        class="c2 c3 c4"
        type="button"
      >
        Points
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-down fa-w-14 "
          data-icon="arrow-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
    <span
      class="c6"
      width="10%"
    >
      Actions
    </span>
  </div>
  <div
    class="c7"
  >
    <span
      class="c1"
      width="40%"
    >
      <a
        href="https://reactjs.org/"
      >
        React
      </a>
    </span>
    <span
      class="c5"
      width="30%"
    >
      Jordan Walke
    </span>
    <span
      class="c6"
      width="10%"
    >
      3
    </span>
    <span
      class="c6"
      width="10%"
    >
      4
    </span>
    <span
      class="c6"
      width="10%"
    >
      <button
        class="c2 c3 c4"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check fa-w-16 "
          data-icon="check"
          data-prefix="fas"
          data-testid="dismiss"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
  </div>
  <div
    class="c7"
  >
    <span
      class="c1"
      width="40%"
    >
      <a
        href="https://redux.js.org/"
      >
        Redux
      </a>
    </span>
    <span
      class="c5"
      width="30%"
    >
      Dan Abramov, Andrew Clark
    </span>
    <span
      class="c6"
      width="10%"
    >
      2
    </span>
    <span
      class="c6"
      width="10%"
    >
      5
    </span>
    <span
      class="c6"
      width="10%"
    >
      <button
        class="c2 c3 c4"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check fa-w-16 "
          data-icon="check"
          data-prefix="fas"
          data-testid="dismiss"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;
